--- a/package.json
+++ b/package.json
@@ -3,15 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "giphy-api": "^1.2.7",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-scripts": "1.0.13",
-    "semantic-react": "^0.12.0"
+    "react-transition-group": "^1.2.0",
+    "semantic-react": "^0.12.0",
+    "semantic-ui-css": "^2.2.12",
+    "semantic-ui-react": "^0.73.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "babel": "^6.23.0",
+    "babel-plugin-module-alias": "^1.6.0"
   }
 }
